# C-_Project

C++_2022/FILE_Operation/: API_readme  CMakeLists.txt
C++_2022/FILE_Operation/files/: test2.txt
C++_2022/FILE_Operation/include/: <<_>>write2file.h  PCres.h  ReadWriteBinaryf.h  write2file.h
C++_2022/FILE_Operation/src/: <<_>>write2file.cpp  GetPut.cpp  PCres.cpp  main.cc  pointerRW.cpp  write2file.cpp
C++_2022/OpenCV/: CMakeLists.txt
C++_2022/其他知识/include/: this_pointer.h
C++_2022/其他知识/src/: const.cpp  main.cc  this_pointer.cpp
C++_2022/多态与虚函数/include/: polymorphism.h
C++_2022/多态与虚函数/src/: main.cc  polymorphism.cpp
C++_2022/引用和指针/include/: pointer.h
C++_2022/引用和指针/src/: main.cc  pointer.cpp  pointer_arr_string_calc.cpp
C_opencv/src/: main.cc
ONNX_RKNN/scene/: CMakeLists.txt
ONNX_RKNN/scene/scene_final/include/: SceneApi.h
ONNX_RKNN/scene/scene_final/src/: SceneApi.cpp
ONNX_RKNN/scene/src/: main.cpp
PTH_ONNX_RKNN/quantization/: changename.py  quantization.txt
PTH_ONNX_RKNN/scripts/: inference.py  onnx2rknn.py  onnx2rknn_conPre.py  onnx2rknn_sinPre.py
SceneRecognition/: CMakeCache.txt  HELLO.cpp
SceneRecognition/Final/352*352/: SceneClassFcParams_352.txt
SceneRecognition/Final/test/datasets_test/: detailed_prediction_logit_v83.xls
SceneRecognition/include/: modelNet.h
SceneRecognition/quantization/: quantization_laptop.txt
SceneRecognition/src/: modelNet.cpp
SceneRecognition/转换和部署/models/pth_model/archive/: data.pkl
SceneRecognition/转换和部署/pro_rknn/: CMakeLists.txt
SceneRecognition/转换和部署/pro_rknn/include/: SceneNet.h  aa.h
SceneRecognition/转换和部署/pro_rknn/src/: SceneNet.cpp  main.cpp
SceneRecognition/转换和部署/scripts/: 1.txt  get_fc_params.py  img_quantization.py
SceneRecognition/转换和部署/src/: test_pth.py
SceneRecognition/转换和部署/src/onnx2rknn/quantization/: quantization_.txt
SceneRecognition/转换和部署/src/onnx2rknn/scripts/: check_rknn.py  convert_rknn.py  onnx2rknn.py  onnx2rknn_conPre.py
SceneRecognition/转换和部署/src/pth2onnx/: 1.py  CombinedModel.py  img.txt  pth2onnx_combiend.py  pth2onnx_resnet18.py  test.py
Test_Vs_Cmake/Cmake_Tutorial/src_normal_estruc/src/: CMakeLists.txt
Test_Vs_Cmake/SimpleTest_Cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
Test_Vs_Cmake/SimpleTest_Cmake/include/: includeT.h  test.h
Test_Vs_Cmake/SimpleTest_Cmake/src/: CMakeLists.txt  Makefile  MatrixP.cpp  includeT.cpp  main  main.cpp  rknn.cpp  test.cpp  test_eigen.cpp
Test_Vs_Cmake/struct_test/: CMakeLists.txt
Test_Vs_Cmake/struct_test/include/: SceneNet.h  ai.h  testClass.h
Test_Vs_Cmake/struct_test/src/: CMakeLists.txt  SceneNet.cpp  main.cpp  testClass.cpp
Test_Vs_Cmake/继承测试/: CMakeLists.txt
Test_Vs_Cmake/继承测试/include/: father.h  son.h
Test_Vs_Cmake/继承测试/src/: main.cc
ai-app-s1-with-scene-classification/: readme
ai-app-s1-with-scene-classification/ai_libs/: libnanomsg.so.5.1.0  libnsl.so.1
rknn/rk_test_project/examples/rknn_mobilenet_demo/: CMakeLists_1806.txt
rknn/rk_test_project/examples/rknn_mobilenet_demo/install/rknn_class_infer_1126/: rknn_class_infer_1126
rknn/rk_test_project/examples/sceneClass/install/rknn_class_infer_1126_linux_scene/: rknn_class_infer_1126_linux_scene
rknn/rk_test_project/examples/sceneClass/src/: SceneNet.cpp  main.cc
rknn/rk_test_project/examples/sceneClass_kj/include/: SceneNet.h
rknn/rk_test_project/examples/sceneClass_kj/src/: SceneNet.cpp
rknn/rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv/: cv.hpp  cxcore.hpp  cxeigen.hpp
rknn/rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv2/: core.hpp  dnn.hpp  features2d.hpp  gapi.hpp  imgproc.hpp  opencv_modules.hpp
rknn/rknn_new/rk_test_project/examples/libs/opencv/opencv_32/include/opencv/: cvaux.h  cvaux.hpp  cvwimage.h  cxcore.h  cxeigen.hpp  cxmisc.h
rknn/rknn_new/rk_test_project/examples/libs/opencv/opencv_32/include/opencv2/: core.hpp  cvconfig.h  dnn.hpp  features2d.hpp  flann.hpp  highgui.hpp  opencv.hpp  photo.hpp  stitching.hpp  superres.hpp  videoio.hpp
rknn/rknn_new/rk_test_project/examples/rknn_mobilenet_demo/src/: class_infer.cc  main.cc
rknn/rknn_new/rk_test_project/examples/rknn_yolo_demo/src/: SCYolo3Detecor.cc  SCYolov3_post_process.h  main.cc
rknn/rknn_new/rknn_transfer/onnx/: convert_rknn.py  dataset_model_224.txt  dataset_model_64.txt
rknn/rknn_new/rknn_transfer/yolov3/: run_and_post_process.py
rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv/: cvaux.hpp
rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv2/: calib3d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  ml.hpp  objdetect.hpp  opencv.hpp  photo.hpp  stitching.hpp  video.hpp  videoio.hpp
rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv2/core/: base.hpp  bindings_utils.hpp  check.hpp  directx.hpp  fast_math.hpp  neon_utils.hpp  ocl.hpp  ocl_genbase.hpp  opengl.hpp  operations.hpp  softfloat.hpp  sse_utils.hpp  version.hpp  vsx_utils.hpp
rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv2/dnn/: dnn.hpp  dnn.inl.hpp  layer.details.hpp  layer.hpp  version.hpp
rknn_new/rk_test_project/examples/libs/opencv/opencv410_aarch64/include/opencv2/flann/: flann_base.hpp
rknn_new/rk_test_project/examples/libs/opencv/opencv_32/include/opencv/: cv.h  cv.hpp  cxcore.hpp  highgui.h  ml.h
rknn_new/rk_test_project/examples/libs/opencv/opencv_32/include/opencv2/: calib3d.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  opencv_modules.hpp  shape.hpp  video.hpp  videostab.hpp
rknn_new/rknn_transfer/onnx/: dataset_128.txt  dataset_64.txt  dataset_model_128.txt
rknn_new/rknn_transfer/yolov3/: dataset.txt  run_and_post_process_1126.py
rknn_new/rknn_transfer/yolov3/s1_one_class_352_all_class_20211202/: yolov4-tiny.cfg
test_models_rknn/: CMakeLists.txt  nano_res.txt  nano_ress.txt  val_pics.txt
test_models_rknn/scripts/: changes_names.py
test_models_rknn/src/: SceneNet.cpp  main.cc
(+561 files in other folders)
